Fix issue with all activities not showing up in filter list

--- a/app/client/src/styles/Search.scss
+++ b/app/client/src/styles/Search.scss
@@ -91,7 +91,7 @@
   }
 
   .filterOptionsContainer {
-    position: absolute;
+    position: relative;
     width: 100%;
     left: 0;
     background-color: $white;
